--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <header id="main-header">
       <!-- the content of the header goes here   -->
-       <h1 id="logo">Tête à Law</h1>
+       <h1 id="logo"><a href="index.html">Tête à Law</a></h1>
        <nav>
         <ul id="nav-ul">
             <li>
-                <a href=""class="navbutton">Home</a>
+                <a href="index.html"class="navbutton">Home</a>
             </li>
             <li>
-                <a href=""class="navbutton">About</a>
+                <a href="about.html"class="navbutton">About</a>
             </li>
             <li>
-                <a href=""class="navbutton">Socials</a>
+                <a href="socials.html"class="navbutton">Socials</a>
             </li>
         </ul>
        </nav>
@@ -148,9 +148,9 @@
             <nav>
                 <ul id="footer-ul">
                     <div> 
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Socials</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="socials.html">Socials</a></li>
                         <li><a href="">law</a></li>
                     </div>
                    <div>
