--- a/socials.html
+++ b/socials.html
@@ -28,20 +28,12 @@
     </header>
     <main>
         <div>
-            <article>
-                <header>
-                    <!-- article header goes here -->
-                    <h2>About</h2>
-                </header>
-                <main>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus aliquam aliquid nostrum aperiam! Vero sed corrupti, aliquid quia nobis repudiandae, obcaecati nam perspiciatis tempore commodi laborum aut natus quam minima.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non officia voluptates dignissimos quo, enim autem aliquam hic dolore totam, dolorem aut cumque repudiandae illum suscipit velit modi. Nihil repellat culpa sint. Ut eveniet officiis soluta voluptatibus atque! Reprehenderit, id voluptatum tempore ullam repellat, soluta, libero quas repellendus quia eveniet quidem?</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis nam iusto voluptates deleniti at quod voluptas adipisci error distinctio. Dolore dicta minus non aperiam sit!</p>
-                    <blockquote>
-                        "and by jorking it"- <cite>trafalgar law, 2006</cite>
-                    </blockquote>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis nam iusto voluptates deleniti at quod voluptas adipisci error distinctio. Dolore dicta minus non aperiam sit!</p>
-                </main>
+            <nav>
+                <ul>
+                    <li> <a href="">Instagram</a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
     <footer>
         <h3>Tête à Law</h3>
