--- a/socials.html
+++ b/socials.html
@@ -11,7 +11,7 @@
 <body>
     <header id="main-header">
       <!-- the content of the header goes here   -->
-       <h1 id="logo">Tête à Law</h1>
+      <h1 id="logo"><a href="index.html">Tête à Law</a></h1>
        <nav>
         <ul id="nav-ul">
             <li>
